--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -7,12 +7,38 @@ nav {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  padding: 16px;
+  background-color: $dark-blue;
+  color: white;
+  a {
+    text-decoration: none;
+    color: inherit;
+    font-size: larger;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 16px 0px;
+    padding: 16px;
+    border-radius: 5px;
+    transition: 0.1s ease-in;
+  }
+  a:hover {
+    background-color: $light-blue;
+    color: black;
+    transform: scale(1.1);
+    transition: 0.1s ease-in;
+  }
 }
 
 #logout-button {
   cursor: pointer;
-  padding: 14px;
+  margin: 16px 0px;
+  padding: 16px;
+  border-radius: 5px;
+  transition: 0.1s ease-in;
 }
 #logout-button:hover {
-  background-color: gray;
+  background-color: $light-blue;
+  color: black;
+//   transform: scale(1.05);
+  transition: 0.1s ease-in;
 }
