css changes: boardItems, lists

--- a/client/src/styles/components/_Board.scss
+++ b/client/src/styles/components/_Board.scss
@@ -14,8 +14,10 @@
     @include flex-row;
     align-items: start;
     justify-content: start;
-    flex-wrap: wrap;
+    overflow-x: scroll;
+    flex-wrap: nowrap;
     gap: 56px;
     padding: 56px;
     width: 100%;
+    min-height: calc(100svh - 56px * 2 - 56px);
 }
