--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,3 +7,6 @@
 @import './components/Board';
 @import './components/List';
 @import './components/Card';
+@import './components/CreateBoardForm';
+@import './components/EditBoardForm';
+@import './components/Footer'
