--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "Pokemon";
-  src: url("/fonts/Pokemon_Classic.ttf") format("truetype");
-}
-$pokemon: "Pokemon";
-
 $blue: #0079bf;
 $green: #70b500;
 $orange: #ff9f1a;
@@ -15,6 +9,7 @@ $light-blue: #00c2e0;
 $light-green: #51e898;
 $gray: #c4c9cc;
 $dark-blue: #1d2125;
+$blue-gray: #333c44;
 
 @keyframes slideFromLeft {
   0% {
