--- a/client/src/styles/views/_App.scss
+++ b/client/src/styles/views/_App.scss
@@ -9,9 +9,10 @@
 //   padding: 0;
 // }
 body {
-  background-color: $gray;
-  background-image: linear-gradient(20deg, rgb(252, 248, 202) 0%, #8fc9ff 100%);
+  background-color: $blue-gray;
+//   background-image: linear-gradient(20deg, rgb(252, 248, 202) 0%, #8fc9ff 100%);
   min-height: 100svh;
+  color: white;
 }
 // a {
 //   text-decoration: none;
