--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,4 +9,5 @@
 @import './components/Card';
 @import './components/CreateBoardForm';
 @import './components/EditBoardForm';
-@import './components/Footer'
+@import './components/Footer';
+@import './components/CreateListForm';
