--- a/client/src/styles/components/_CreateBoardForm.scss
+++ b/client/src/styles/components/_CreateBoardForm.scss
@@ -6,8 +6,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    // gap: 4px;
     cursor: pointer;
-    border: 1px solid $blue;
+    border: 1px solid $light-blue;
     background-color: $dark-blue;
     border-radius: 5px;
     padding: 16px;
@@ -18,7 +19,7 @@
     aspect-ratio: 1 / 1;
     input {
         background-color: $blue-gray;
-        padding: 16px;
+        padding: 8px 16px;
         border-radius: 5px;
         overflow: hidden;
         text-wrap: wrap;
@@ -31,4 +32,27 @@
     select, textarea {
         color: white;
     }
+    button {
+        background-color: $blue;
+        padding: 8px 16px;
+        border: 1px solid $gray;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    button:hover {
+        border: 1px solid $light-blue;
+        // background-color: $green;
+    }
+}
+
+.create-board-buttons {
+    @include flex-row;
+    gap: 16px;
+    margin-top: 8px;
+}
+.create-board-button-create:hover {
+    background-color: $light-blue;
+}
+.create-board-button-cancel:hover {
+    background-color: $red;
 }
