--- a/client/src/styles/components/_BoardItem.scss
+++ b/client/src/styles/components/_BoardItem.scss
@@ -4,31 +4,48 @@
 .board-item, .create-board-button {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: start;
+    justify-content: flex-start;
     cursor: pointer;
     border: 1px solid $blue;
     background-color: $dark-blue;
     border-radius: 5px;
     padding: 16px;
     width: 250px;
-    height: 250px;
+    height: calc(2/3 * 250px);
+    .board-item-buttons {
+        margin-bottom: 12px;
+        width: 100%;
+        visibility: visible;
+        z-index: 10;
+    }
+    .board-item-buttons:hover{
+        visibility: visible;
+        z-index: 10;
+    }
+    h2 {
+        padding: 0;
+        margin: 0;
+        margin-left: 12px;
+    }
     h3 {
         font-style: italic;
+        font-weight: normal;
+        margin-left: 12px;
     }
-    transition: all 0.25s ease-in;
+    transition: all 0.2s ease-in;
 }
 .board-item:hover, .create-board-button:hover {
-    transition: all 0.25s ease-in;
+    transition: all 0.2s ease-in;
     background-color: $red;
     border: 1px solid $red;
     // transform: rotateX(10deg) scale(1.01);
-    box-shadow: 0px 10px 1px rgba($color: $dark-blue, $alpha: 1);
+    box-shadow: 5px 5px 5px rgba($color: $dark-blue, $alpha: 1);
 }
 
 .board-item-buttons {
     @include flex-row;
-    width: 90%;
+    // width: 90%;
     justify-content: space-between;
     transition: all 0.1s ease-in;
     :hover{
