update/css scrollbar

--- a/client/src/styles/components/_Board.scss
+++ b/client/src/styles/components/_Board.scss
@@ -52,8 +52,8 @@ background-color: $red;
 
 /* Works on Firefox */
 * {
-    scrollbar-width: thin;
-    scrollbar-color: $blue $red;
+    // scrollbar-width: thin;
+    // scrollbar-color: $blue $red;
   }
   
   /* Works on Chrome, Edge, and Safari */
